--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
                 password: "password789",
                 name: "Ani Suryani",
                 attendance: "02"
+            },
+            {
+                username: "daviant",
+                password: "ganteng",
+                name: "Daviant Dascha Arfhiansyah",
+                attendance: "03"
             }
         ];
 
